feature (site) : Modification theme + ajout disqus

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,18 @@
       <!--/.nav-collapse -->
     </div>
   </nav>
+  <header class="Header{{ page.header_img }}">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="page-heading">
+            <h1>{{ page.title }}</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
   <div class="container">
     {{ content }}
   </div>
