--- a/css/main.scss
+++ b/css/main.scss
@@ -2,9 +2,55 @@
 
 body {
   padding-top: 50px;
-  background-color: #ddd;
 }
 
 blockquote {
   text-align: justify;
+}
+
+.page-header {
+  margin: 0;
+  text-align: center;
+}
+
+header {
+  background-color: #ddd;
+  padding-top: 15px;
+  height: 500px;
+  margin-bottom: 50px;
+  background: no-repeat center center;
+  background-color: #868e96;
+  background-attachment: scroll;
+  position: relative;
+  background-size: cover;
+  text-align: center;
+
+  > .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #212529;
+    opacity: 0.5;
+  }
+}
+
+.page-heading {
+  color: white;
+  padding: 200 0;
+}
+
+.Headersite {}
+
+.Headercontact {
+  background-image: url("img/contact-bg.jpg");
+}
+
+.HeaderPost {
+  background-image: url("img/post-bg.jpg");
+}
+
+.Headerabout {
+  background-image: url("img/about-bg.png");
 }
