debug (disqus) : correction disqus

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,8 +48,9 @@
     <blockquote>
       {{ content }}
     </blockquote>
+    {% include disqus.html %}
   </div>
-  {% include disqus.html %} {% include js.html %}
+  {% include js.html %}
 </body>
 
 </html>
