--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="/">Accueil</a></li>
+          <li><a href="/histoire">Histoires</a></li>
           <li><a href="/apropos">A propos</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
@@ -39,7 +40,7 @@
     </div>
   </header>
   <div class="container">
-    {{ content }}
+    {{ content }} {% include paginator.html %}
   </div>
   {% include js.html %}
 </body>
