--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,8 +18,8 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/">Accueil</a></li>
-          <li><a href="/histoire">Histoires</a></li>
+          <li><a href="/">Accueil</a></li>
+          <li class="active"><a href="/histoire">Histoires</a></li>
           <li><a href="/apropos">A propos</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
