--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        publié le {{ page.date | date: "%d/%m/%Y" }} par {% if page.email %}<a href="mailto:{{ page.email }}">{% endif %}{{ page.auteur}}{% if page.email %}</a>{% endif %}
+        publié le {{ page.date | date: "%d/%m/%Y" }} par {% if page.auteur.email %}<a href="mailto:{{ page.auteur.email }}">{% endif %}{{ page.auteur.nom }}{% if page.email %}</a>{% endif %}
       </div>
     </div>
     <hr />
